--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,14 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   mobx: ^1.0.0
   flutter_mobx: ^1.0.1
   mobx_codegen: ^1.0.1
   intl: ^0.16.1
+  hasura_connect: ^1.1.1
 
 
 dev_dependencies:
