--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   logger: ^0.8.3
   provider: ^4.0.4
   google_fonts: ^0.3.9
+  # Animation
+  flare_flutter: ^1.7.3
+  rive: ^0.0.1
 
 
 dev_dependencies:
