[Fix] Try fix bug in login and get refresh token Controller for animation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   logger: ^0.8.3
   provider: ^4.0.4
   google_fonts: ^0.3.9
+  jiffy: ^2.2.0
   # Animation
-  flare_flutter: ^1.7.3
+  flare_flutter: ^1.8.3
   rive: ^0.0.1
 
 
