--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^4.0.4
   google_fonts: ^0.3.9
   jiffy: ^2.2.0
+  dio: ^3.0.9
   # Animation
   flare_flutter: ^1.8.3
   rive: ^0.0.1
