--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^4.0.4
   google_fonts: ^0.3.9
   dio: ^3.0.9
+  achievement_view: ^0.2.0
+  font_awesome_flutter: ^8.7.0
   # Animation
   flare_flutter: ^1.8.3
   rive: ^0.0.1
